commit 289d0a3b9e373a2187beaf571b177874e6bebb48
Author: Matthias Weckbecker <mweckbecker@suse.de>
Date:   Tue Dec 7 15:14:52 2010 +0100

     - add timeout support

commit ae037ab88635b329ad14e286b672cc1b5f82965f
Author: Matthias Weckbecker <mweckbecker@suse.de>
Date:   Mon Dec 6 13:26:08 2010 +0100

     - Fixed version number for good. Hopefully. + Added some more tests for the interface.

commit f435d77741f3f7da5ae49bc2462cba48082f807a
Author: Matthias Weckbecker <mweckbecker@suse.de>
Date:   Sat Dec 4 17:57:02 2010 +0100

     - Fix custom HTTP UserAgent handlinf

commit e869509ab9d78a3ce5f7f04e7830ac1dc83969d0
Author: Matthias Weckbecker <mweckbecker@suse.de>
Date:   Sat Dec 4 17:46:47 2010 +0100

     - Fix MANIFEST
     - Fix "use of uninitialized value" in Bugzilla.pm

commit e3d3c8b9b2cee89a9c502dd01257958af1d58343
Author: Matthias Weckbecker <mweckbecker@suse.de>
Date:   Sat Dec 4 17:29:11 2010 +0100

     - Fix some bugs and add tests.

commit e67f43f8ba0bd4d4ef5abf2d35a9094c31340763
Author: Matthias Weckbecker <mweckbecker@suse.de>
Date:   Sat Dec 4 13:52:11 2010 +0100

     - add contrib directory

commit 47f100689a949662474533df65fec996c9dccb2d
Author: Matthias Weckbecker <mweckbecker@suse.de>
Date:   Sat Dec 4 13:49:26 2010 +0100

     Again numerous of different changes:
    
      - Added information such as requirements, installation, etc. in README file
      - Fixed MANIFEST
      - Use HTTP over SSL per default on bugzilla.novell.com

commit cfbea5cb55c2210705f86c690d24e392ca76bff7
Author: Matthias Weckbecker <mweckbecker@suse.de>
Date:   Sat Dec 4 13:10:01 2010 +0100

     - Update MANIFEST

commit 84950cf24a7701d6b24e61c1dce216f44ce83d34
Author: Matthias Weckbecker <mweckbecker@suse.de>
Date:   Sat Dec 4 13:06:08 2010 +0100

     - Proxy support added

commit 89a547a977f1770c3d9a7a24f0cb7f8619b7022b
Author: Matthias Weckbecker <mweckbecker@suse.de>
Date:   Fri Dec 3 16:55:12 2010 +0100
