@@ -1,4 +1,21 @@
 #!/usr/bin/perl -w
+########################################################################
+# Novell::Bugzilla - Authenticate on 'bugzilla.novell.com' via iChain
+# Copyright (C) 2010 Matthias Weckbecker,  <matthias@weckbecker.name>
+#
+# This program is free software: you can redistribute it and/or modify
+# it under the terms of the GNU General Public License as published by
+# the Free Software Foundation, either version 3 of the License, or
+# (at your option) any later version.
+#
+# This program is distributed in the hope that it will be useful, but
+# WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY
+# or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License
+# for more details.
+#
+# You should have received a copy of the GNU General Public License
+# along with this program.  If not, see <http://www.gnu.org/licenses/>.
+########################################################################
 
 use strict;
 use warnings 'all';
@@ -24,7 +41,7 @@ my (@open_l3) =
   ( memGunzip $nb->get($search_string)->content ) =~
   m{(show_bug.cgi\?id=(?:\d+))}g;
 
-sub cut     { ($_[0]=~m{^(.{30})}) };
+sub cut { ( $_[0] =~ m{^(.{30})} ) }
 
 foreach (@open_l3) {
     my $current_url     = "$bugzilla_url/$_&ctype=xml";
