@@ -1,3 +1,9 @@
+commit aaaddcbe2b13a960bcdbf749c5f1cf517ec6035e
+Author: Matthias Weckbecker <mweckbecker@suse.de>
+Date:   Mon Dec 13 15:40:41 2010 +0100
+
+     - Updated tests and README, added example code
+
 commit 289d0a3b9e373a2187beaf571b177874e6bebb48
 Author: Matthias Weckbecker <mweckbecker@suse.de>
 Date:   Tue Dec 7 15:14:52 2010 +0100
